{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 31,
  "lineage": "f4b89418-f176-570f-9d4a-a78da0f1ce5b",
  "resources": [
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:internet-gateway/igw-0838f75133e4f8cf1",
            "id": "igw-0838f75133e4f8cf1",
            "owner_id": "760969581687",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0838f75133e4f8cf1",
            "id": "r-rtb-0b02ef7707e8855c81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b02ef7707e8855c8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_east.aws_internet_gateway.this",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:route-table/rtb-0ca5233e5cc84a517",
            "id": "rtb-0ca5233e5cc84a517",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:route-table/rtb-07f6fce58578edac0",
            "id": "rtb-07f6fce58578edac0",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-private-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:route-table/rtb-0b02ef7707e8855c8",
            "id": "rtb-0b02ef7707e8855c8",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public",
              "Region": "east",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e03b355e3ea3b46",
            "route_table_id": "rtb-0ca5233e5cc84a517",
            "subnet_id": "subnet-0d2b02d99928fbe6c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.database",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.database",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c10fbe69591558b",
            "route_table_id": "rtb-07f6fce58578edac0",
            "subnet_id": "subnet-0710508bfd30785eb"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.database",
            "module.vpc_east.aws_route_table.private",
            "module.vpc_east.aws_subnet.database",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf9bc7533522ec85",
            "route_table_id": "rtb-0b02ef7707e8855c8",
            "subnet_id": "subnet-00333e9408ce4524c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084e7c849a91f5a81",
            "route_table_id": "rtb-0b02ef7707e8855c8",
            "subnet_id": "subnet-04d06ad0d356d59fd"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_route_table.public",
            "module.vpc_east.aws_subnet.public",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:subnet/subnet-0d2b02d99928fbe6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2b02d99928fbe6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:subnet/subnet-0710508bfd30785eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0710508bfd30785eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-db-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:subnet/subnet-00333e9408ce4524c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00333e9408ce4524c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1a",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:subnet/subnet-04d06ad0d356d59fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d06ad0d356d59fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east-public-us-east-1b",
              "Region": "east",
              "Team": "infra"
            },
            "vpc_id": "vpc-09ab31b99036311dc"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_east",
            "module.vpc_east.aws_vpc.this",
            "module.vpc_east.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_east",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:760969581687:vpc/vpc-09ab31b99036311dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-01ff9e2fefe6caf3e",
            "default_route_table_id": "rtb-00960785181a7b84e",
            "default_security_group_id": "sg-0f8a093ed531172f3",
            "dhcp_options_id": "dopt-078e2814d36e597e8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ab31b99036311dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00960785181a7b84e",
            "owner_id": "760969581687",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-east",
              "Region": "east",
              "Team": "infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:internet-gateway/igw-04c1e73521ef6a7f9",
            "id": "igw-04c1e73521ef6a7f9",
            "owner_id": "760969581687",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-034812755afc89fca"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c1e73521ef6a7f9",
            "id": "r-rtb-05d428f26112468b31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05d428f26112468b3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:route-table/rtb-0b94e279e91632ced",
            "id": "rtb-0b94e279e91632ced",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-034812755afc89fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:route-table/rtb-0a231e34c9b5cc277",
            "id": "rtb-0a231e34c9b5cc277",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-private-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-034812755afc89fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:route-table/rtb-05d428f26112468b3",
            "id": "rtb-05d428f26112468b3",
            "owner_id": "760969581687",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public",
              "Region": "west",
              "Team": "infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-034812755afc89fca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641bb422026d023e",
            "route_table_id": "rtb-0b94e279e91632ced",
            "subnet_id": "subnet-0b3433760b27b8426"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.database",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.database",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006ce067a5eb50ebf",
            "route_table_id": "rtb-0a231e34c9b5cc277",
            "subnet_id": "subnet-092273ba93ac3bf22"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.database",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.database",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b4c216f44af01b4",
            "route_table_id": "rtb-05d428f26112468b3",
            "subnet_id": "subnet-0974606f6f3608a5d"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069099fc859ae1b34",
            "route_table_id": "rtb-05d428f26112468b3",
            "subnet_id": "subnet-038f8c47177a65c21"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:subnet/subnet-0b3433760b27b8426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3433760b27b8426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-034812755afc89fca"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:subnet/subnet-092273ba93ac3bf22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092273ba93ac3bf22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-db-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-034812755afc89fca"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:subnet/subnet-0974606f6f3608a5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0974606f6f3608a5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1a",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-034812755afc89fca"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:subnet/subnet-038f8c47177a65c21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f8c47177a65c21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "760969581687",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west-public-us-west-1b",
              "Region": "west",
              "Team": "infra"
            },
            "vpc_id": "vpc-034812755afc89fca"
          },
          "dependencies": [
            "data.aws_availability_zones.azs_west",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].west",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:760969581687:vpc/vpc-034812755afc89fca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0c27a5a5ac9d949b3",
            "default_route_table_id": "rtb-04941b5366a771d87",
            "default_security_group_id": "sg-0637459bc83566d9a",
            "dhcp_options_id": "dopt-01cb65bee5807de10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034812755afc89fca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04941b5366a771d87",
            "owner_id": "760969581687",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "prod-vpc-west",
              "Region": "west",
              "Team": "infra"
            }
          }
        }
      ]
    }
  ]
}